Fix for login page center alignment bug

--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,12 +1,3 @@
-.Login {
-    max-width: 420px;
-    min-width: 300px;
-    padding-top: 40px;
-    padding-left: 20px;
-    padding-right: 20px;
-
-}
-
 .stripes-container-login {
     pointer-events: none;
     position: absolute;
